# zipper

./: LICENSE  MANIFEST.in  README.md  Zippy.kv  __init__.py  __main__.py  input_manager.py  main.py  pyproject.toml  rect.py  tmx.py
.github/workflows/: ci.yml
Maps/prototype1/: 16px-680x800-metal-template.tmx  16px-680x800-metal-xml.tmx  16px-680x800-metal.tmx  16px-680x800-metal2.tmx  basic16px-680x800_larger.tmx  basic16px-680x800_metal.tmx
animation/animatlas/: myatlas.atlas  zipperanimatlas.atlas
animation/attack/: atk.atlas
animation/dupdup/: zipperanim.atlas.atlas
animation/effects/: arrow.atlas  template.pdn
animation/movement/: animatlas.atlas
animation/special/: specatlas-1.pdn  specatlas.atlas
animation/special/wall_anim/: wall.atlas
tests/: test_launch.py
